more little changes

--- a/source/redirects.yaml
+++ b/source/redirects.yaml
@@ -1343,4 +1343,4 @@
   Workshop travel: Workshop Nov 2011 - travel
   Www.ovirt.org-Configuration: infra/www.ovirt.org-configuration
   Xen: howto/xen
-  Feature: Category:Features
+  Feature: develop/release-management/features
